[package]
name = "radiors"
version = "0.0.2"
edition = "2021"
rust-version = "1.79"
description = "🎛️ A highly customizable radio buttons component for WASM frameworks like Yew, Dioxus, and Leptos."
license = "MIT"
keywords = ["radio", "yew", "rust", "dioxus", "leptos"]
categories = ["web-programming", "science"]
repository = "https://github.com/opensass/radio-rs"
documentation = "https://docs.rs/radiors/"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
exclude = ["assets", "examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = "0.3.76"
yew = { version = "0.21.0", default-features = false, optional = true }
dioxus = { version = "0.6.1", optional = true }

[features]
yew = ["dep:yew"]
dio = ["dioxus"]

[profile.release]
opt-level = "z"
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
log = "0.4.22"
bump2version = "0.1.4"
